docs/apache-airflow-providers-google/14.1.0/_sources/_api/airflow/providers/google/cloud/links/cloud_build/index.rst.txt
airflow.providers.google.cloud.links.cloud_build
================================================

.. py:module:: airflow.providers.google.cloud.links.cloud_build


Attributes
----------

.. autoapisummary::

   airflow.providers.google.cloud.links.cloud_build.BUILD_BASE_LINK
   airflow.providers.google.cloud.links.cloud_build.BUILD_LINK
   airflow.providers.google.cloud.links.cloud_build.BUILD_LIST_LINK
   airflow.providers.google.cloud.links.cloud_build.BUILD_TRIGGERS_LIST_LINK
   airflow.providers.google.cloud.links.cloud_build.BUILD_TRIGGER_DETAILS_LINK


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.links.cloud_build.CloudBuildLink
   airflow.providers.google.cloud.links.cloud_build.CloudBuildListLink
   airflow.providers.google.cloud.links.cloud_build.CloudBuildTriggersListLink
   airflow.providers.google.cloud.links.cloud_build.CloudBuildTriggerDetailsLink


Module Contents
---------------

.. py:data:: BUILD_BASE_LINK
   :value: '/cloud-build'


.. py:data:: BUILD_LINK
   :value: '/cloud-build/builds;region={region}/{build_id}?project={project_id}'


.. py:data:: BUILD_LIST_LINK
   :value: '/cloud-build/builds;region={region}?project={project_id}'


.. py:data:: BUILD_TRIGGERS_LIST_LINK
   :value: '/cloud-build/triggers;region={region}?project={project_id}'


.. py:data:: BUILD_TRIGGER_DETAILS_LINK
   :value: '/cloud-build/triggers;region={region}/edit/{trigger_id}?project={project_id}'


.. py:class:: CloudBuildLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Cloud Build link.


   .. py:attribute:: name
      :value: 'Cloud Build Details'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'cloud_build_key'



   .. py:attribute:: format_str
      :value: '/cloud-build/builds;region={region}/{build_id}?project={project_id}'



   .. py:method:: persist(context, task_instance, build_id, project_id, region)
      :staticmethod:



.. py:class:: CloudBuildListLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Cloud Build List link.


   .. py:attribute:: name
      :value: 'Cloud Builds List'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'cloud_build_list_key'



   .. py:attribute:: format_str
      :value: '/cloud-build/builds;region={region}?project={project_id}'



   .. py:method:: persist(context, task_instance, project_id, region)
      :staticmethod:



.. py:class:: CloudBuildTriggersListLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Cloud Build Triggers List link.


   .. py:attribute:: name
      :value: 'Cloud Build Triggers List'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'cloud_build_triggers_list_key'



   .. py:attribute:: format_str
      :value: '/cloud-build/triggers;region={region}?project={project_id}'



   .. py:method:: persist(context, task_instance, project_id, region)
      :staticmethod:



.. py:class:: CloudBuildTriggerDetailsLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing Cloud Build Trigger Details link.


   .. py:attribute:: name
      :value: 'Cloud Build Triggers Details'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'cloud_build_triggers_details_key'



   .. py:attribute:: format_str
      :value: '/cloud-build/triggers;region={region}/edit/{trigger_id}?project={project_id}'



   .. py:method:: persist(context, task_instance, project_id, region, trigger_id)
      :staticmethod:



